2023-05-28  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-ast.h (PKL_AST_DECL_IN_STRUCT_P): Add comment to
	explain the field.

2023-05-24  Constantin Nickel  <constantin.nickel@gmail.com>

	* libpoke/libpoke.h (pk_compiler_new): Remove leftover comment
	about RTPATH argument.

2023-05-23  Constantin Nickel  <constantin.nickel@gmail.com>

	* common/pk-utils.h: Fix spelling mistakes.
	* doc/poke.texi: Likewise.
	* libpoke/ios.h: Likewise.
	* libpoke/libpoke.h: Likewise.
	* libpoke/pkl-ast.h: Likewise.
	* libpoke/pkl-promo.c: Likewise.
	* libpoke/pkl-rt.pk: Likewise.
	* libpoke/pkl.h: Likewise.
	* libpoke/pvm-val.h: Likewise.
	* libpoke/pvm.jitter: Likewise.
	* libpoke/ras: Likewise.
	* pickles/pe.pk: Likewise.
	* poke/pk-cmd-ios.c: Likewise.
	* poke/pk-settings.pk: Likewise.
	* testsuite/poke.pkl/eq-any-integral-1.pk: Likewise.
	* testsuite/poke.pkl/eq-any-integral-2.pk: Likewise.
	* testsuite/poke.pkl/eq-any-integral-3.pk: Likewise.
	* testsuite/poke.pkl/eq-any-integral-4.pk: Likewise.

2023-05-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_ass_stmt): Perform a LMAP whenever
	necessary when assigning to struct fields within methods.
	* testsuite/poke.map/setter-1.pk: New test.
	* testsuite/poke.map/setter-2.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2023-05-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y: Adjust hack that workarounds bison problem to
	field pre-conditions.
	* testsuite/poke.pkl/int-union-type-diag-9.pk: Fix test.

2023-05-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (PKL_GEN_PUSH_CONTEXT): Emit error instead of
	aborting if maximum nesting level is reached.
	* libpoke/pkl-anal.c (PKL_ANAL_PUSH_CONTEXT): Likewise.
	* testsuite/poke.pkl/maxnest-diag-1.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2023-05-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-env.c (pkl_env_iter_next): Skip re-defined
	declarations.