@@ -1,3 +1,9 @@
+2023-05-19  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-ast.h (struct pkl_ast_func): New field
+	`method-struct'.
+	(PKL_AST_FUNC_METHOD_STRUCT): Define.
+
 2023-05-28  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* libpoke/pkl-ast.h (PKL_AST_DECL_IN_STRUCT_P): Add comment to
